--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
             <h3>Kaffee Kamiel</h3></a
           >
         </div>
+      </div><div class="cards-container"></div>
+        <div class="card">
+          <a href="#blackbird">
+            <img src="./images/Blackbird 2.jpg" alt="Blackbird ontbijt" />
+            <h3>Blackbird</h3></a
+          >
+        </div>
+        <div class="card">
+          <a href="#hotel_de_orangerie">
+            <img
+              src="./images/Hotel De Orangerie 1.webp"
+              alt="Orangerie ontbijt"
+            />
+            <h3>Orangerie</h3></a
+          >
+        </div>
+        <div class="card">
+          <a href="#kaffee_kamiel">
+            <img
+              src="./images/Kaffee Kamiel 1.jpg"
+              alt="Kaffee Kamiel ontbijt"
+            />
+            <h3>Kaffee Kamiel</h3></a
+          >
+        </div>
       </div>
     </section>
 
