--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <h3>Kaffee Kamiel</h3></a
           >
         </div>
-      </div><div class="cards-container"></div>
+      </div>
+      <div class="cards-container"></div>
         <div class="card">
           <a href="#blackbird">
             <img src="./images/Blackbird 2.jpg" alt="Blackbird ontbijt" />
