--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           version="1.0"
           viewBox="0.0 0.0 237.4 237.4"
           zoomAndPan="magnify"
-          style="fill: rgb(184, 160, 84); max-width: 60px; margin-right: 20px"
+          style="fill: rgb(184, 160, 84); max-width: 60px; margin-right: 20px; width:30px;"
           original_string_length="761"
         >
           <g id="__id155_s879okahiq">
