--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Breakfast HQ</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,6 +15,33 @@
   <link rel="manifest" href="favicon/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
+  <!-- HTML Meta Tags -->
+  <title>Breakfast HQ</title>
+  <meta name="description"
+    content="Saartje en Lien delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://stijn-peeters.github.io/preview/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Breakfast HQ">
+  <meta property="og:description"
+    content="Saartje en Lien delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
+  <meta property="og:image" content="images/Breakfast HQ.png">
+
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="stijn-peeters.github.io">
+  <meta property="twitter:url" content="https://stijn-peeters.github.io/preview/">
+  <meta name="twitter:title" content="Breakfast HQ">
+  <meta name="twitter:description"
+    content="Saartje en Lien delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
+  <meta name="twitter:image" content="images/Breakfast HQ.png">
+
+
+  <script
+    type="text/javascript"> (function (c, l, a, r, i, t, y) { c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) }; t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i; y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y); })(window, document, "clarity", "script", "o33o2ivadh"); </script>
 </head>
 
 <body>
