--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <!-- HTML Meta Tags -->
   <title>Breakfast HQ</title>
   <meta name="description"
-    content="Saartje en Lien delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
+    content="Lien en Saartje delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://stijn-peeters.github.io/preview/">
+  <meta property="og:url" content="https://breakfasthq.be/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Breakfast HQ">
   <meta property="og:description"
@@ -32,8 +32,8 @@
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="stijn-peeters.github.io">
-  <meta property="twitter:url" content="https://stijn-peeters.github.io/preview/">
+  <meta property="twitter:domain" content="breakfasthq.be">
+  <meta property="twitter:url" content="https://breakfasthq.be/">
   <meta name="twitter:title" content="Breakfast HQ">
   <meta name="twitter:description"
     content="Saartje en Lien delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
