--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Breakfast HQ">
   <meta property="og:description"
-    content="Saartje en Lien delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
+    content="Lien en Saartje delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
   <meta property="og:image" content="images/Breakfast HQ.png">
 
 
@@ -36,7 +36,7 @@
   <meta property="twitter:url" content="https://breakfasthq.be/">
   <meta name="twitter:title" content="Breakfast HQ">
   <meta name="twitter:description"
-    content="Saartje en Lien delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
+    content="Lien en Saartje delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
   <meta name="twitter:image" content="images/Breakfast HQ.png">
 
 
