--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta property="og:title" content="Breakfast HQ">
   <meta property="og:description"
     content="Lien en Saartje delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
-  <meta property="og:image" content="images/Breakfast HQ.png">
+  <meta property="og:image" content="https://breakfasthq.be/images/Breakfast%20HQ.png">
 
 
   <!-- Twitter Meta Tags -->
@@ -37,7 +37,7 @@
   <meta name="twitter:title" content="Breakfast HQ">
   <meta name="twitter:description"
     content="Lien en Saartje delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
-  <meta name="twitter:image" content="images/Breakfast HQ.png">
+  <meta name="twitter:image" content="https://breakfasthq.be/images/Breakfast%20HQ.png">
 
 
   <script
