--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- HTML Meta Tags -->
-  <title>Breakfast HQ</title>
+  <title>Breakfast HQ | The Blog</title>
   <meta name="description"
     content="Lien en Saartje delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
 
@@ -47,7 +47,7 @@
 <body>
   <!-- Sticky back to top -->
   <div class="sticky-top">
-    <a href="#cards">
+    <a href="#cards" aria-label="Back to top">
       <svg fill="none" stroke="#b8a054" viewBox="-5 0 250 250">
         <g stroke="##b8a054" stroke-linecap="round" stroke-linejoin="round" stroke-width="15">
           <path d="M120 224.2c55.23 0 100-44.77 100-100s-44.77-100-100-100-100 44.77-100 100 44.77 100 100 100Z" />
@@ -163,7 +163,7 @@
   <!-- Final Section -->
   <section class="final-section">
     <img src="./images/footer_contact.png" alt="Saartje en Lien" width="800" />
-    <a href="mailto:pwdshx7yhp@privaterelay.appleid.com?subject=Mailtje%20van%20Breakfast%20HQ&body=Hey">
+    <a href="mailto:pwdshx7yhp@privaterelay.appleid.com?subject=Mailtje%20van%20Breakfast%20HQ&body=Hey" title="Contact us">
       contact us
     </a>
   </section>
