images with space

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta property="og:title" content="Breakfast HQ">
   <meta property="og:description"
     content="Lien en Saartje delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
-  <meta property="og:image" content="https://breakfasthq.be/images/Breakfast%20HQ.png">
+  <meta property="og:image" content="https://breakfasthq.be/images/Breakfast_HQ.png">
 
 
   <!-- Twitter Meta Tags -->
@@ -37,7 +37,7 @@
   <meta name="twitter:title" content="Breakfast HQ">
   <meta name="twitter:description"
     content="Lien en Saartje delen hun zoektocht naar de beste ontbijtplekjes in Brugge. Bij Breakfast HQ kan je reviews vinden voor jouw volgende breakfast spot.">
-  <meta name="twitter:image" content="https://breakfasthq.be/images/Breakfast%20HQ.png">
+  <meta name="twitter:image" content="https://breakfasthq.be/images/Breakfast_HQ.png">
 
 
   <script
@@ -70,19 +70,19 @@
     <div class="cards-container">
       <div class="card">
         <a href="#blackbird">
-          <img src="./images/Blackbird 2.jpg" alt="Blackbird ontbijt" />
+          <img src="./images/Blackbird_2.jpg" alt="Blackbird ontbijt" />
           <h3>Blackbird</h3>
         </a>
       </div>
       <div class="card">
         <a href="#hotel_de_orangerie">
-          <img src="./images/Hotel De Orangerie 1.webp" alt="Orangerie ontbijt" />
+          <img src="./images/Hotel_De_Orangerie_1.webp" alt="Orangerie ontbijt" />
           <h3>Orangerie</h3>
         </a>
       </div>
       <div class="card">
         <a href="#kaffee_kamiel">
-          <img src="./images/Kaffee Kamiel 1.jpg" alt="Kaffee Kamiel ontbijt" />
+          <img src="./images/Kaffee_Kamiel_1.jpg" alt="Kaffee Kamiel ontbijt" />
           <h3>Kaffee Kamiel</h3>
         </a>
       </div>
@@ -112,13 +112,13 @@
     </div>
     <div class="grid-container">
       <div class="grid-item">
-        <img src="./images/Blackbird 1.jpg" alt="Latte met speculoos" />
+        <img src="./images/Blackbird_1.jpg" alt="Latte met speculoos" />
       </div>
       <div class="grid-item">
-        <img src="./images/Blackbird 2.jpg" alt="Ontbijt" />
+        <img src="./images/Blackbird_2.jpg" alt="Ontbijt" />
       </div>
       <div class="grid-item">
-        <img src="./images/Blackbird 3.jpg" alt="Koffie en vers geperst sap" />
+        <img src="./images/Blackbird_3.jpg" alt="Koffie en vers geperst sap" />
       </div>
     </div>
   </section>
@@ -149,13 +149,13 @@
     </div>
     <div class="grid-container">
       <div class="grid-item">
-        <img src="./images/Hotel De Orangerie 2.jpg" alt="Buffettafel" />
+        <img src="./images/Hotel_De_Orangerie_2.jpg" alt="Buffettafel" />
       </div>
       <div class="grid-item">
-        <img src="./images/Hotel De Orangerie 3.jpg" alt="Tafel met uitzicht" />
+        <img src="./images/Hotel_De_Orangerie_3.jpg" alt="Tafel met uitzicht" />
       </div>
       <div class="grid-item">
-        <img src="./images/Hotel De Orangerie 1.webp" alt="Service" />
+        <img src="./images/Hotel_De_Orangerie_1.webp" alt="Service" />
       </div>
     </div>
   </section>
