--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <b>Lien & Saartje</b>
 
         <br /><br />
-        favoriet van Lien: de wafeltjes en dadels favoriet van Saartje: de
-        rösti met ui en spek & de grote aardbeien
+        favoriet van Lien: de wafeltjes en dadels <br />
+        favoriet van Saartje: de rösti met ui en spek & de grote aardbeien
       </p>
     </div>
     <div class="grid-container">
