--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       </svg>
     </a>
   </div>
+
   <!-- Fullscreen Section -->
   <section class="fullscreen">
     <h1>Breakfast<br />HQ</h1>
@@ -73,25 +74,41 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, laudantium doloremque autem ea delectus, veritatis
       minus necessitatibus error nobis esse facilis dolores assumenda dolore blanditiis dignissimos ab distinctio
       aliquam exercitationem adipisci consequatur vero sit? Quo voluptatibus amet eligendi maiores ab?</p>
-    <div class="cards-container">
-      <div class="card">
-        <a href="#blackbird">
-          <img src="./images/Blackbird_2.jpg" alt="Blackbird ontbijt" />
-          <h3>Blackbird</h3>
-        </a>
-      </div>
-      <div class="card">
-        <a href="#hotel_de_orangerie">
-          <img src="./images/Hotel_De_Orangerie_1.webp" alt="Orangerie ontbijt" />
-          <h3>Orangerie</h3>
-        </a>
-      </div>
-      <div class="card">
-        <a href="#kaffee_kamiel">
-          <img src="./images/Kaffee_Kamiel_1.jpg" alt="Kaffee Kamiel ontbijt" />
-          <h3>Kaffee Kamiel</h3>
-        </a>
-      </div>
+
+    <div style="position: relative;">
+      <swiper-container class="mySwiper cards-container" init="false">
+        <swiper-slide class="card">
+          <a href="#blackbird">
+            <img src="./images/Blackbird_2.jpg" alt="Blackbird ontbijt" />
+            <h3>Blackbird</h3>
+          </a>
+        </swiper-slide>
+        <swiper-slide class="card">
+          <a href="#hotel_de_orangerie">
+            <img src="./images/Hotel_De_Orangerie_1.webp" alt="Orangerie ontbijt" />
+            <h3>Orangerie</h3>
+          </a>
+        </swiper-slide>
+        <swiper-slide class="card">
+          <a href="#kaffee_kamiel">
+            <img src="./images/Kaffee_Kamiel_1.jpg" alt="Kaffee Kamiel ontbijt" />
+            <h3>Kaffee Kamiel</h3>
+          </a>
+        </swiper-slide>
+      </swiper-container>
+      <button class="prev-button"><svg width="11" height="20" viewBox="0 0 11 20" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z"
+            fill="#b8a054" transform-origin="center" transform="rotate(180)"></path>
+        </svg></button>
+      <button class="next-button">
+        <svg width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z"
+            fill="#b8a054"></path>
+        </svg>
+      </button>
     </div>
   </section>
 
@@ -174,6 +191,49 @@
       contact us
     </a>
   </section>
+
+  <script>
+    const container = document.querySelector('.cards-container');
+    const swiperEl = document.querySelector('swiper-container');
+    const prevBtn = document.querySelector('.prev-button');
+    const nextBtn = document.querySelector('.next-button');
+    let childCount = container.children.length;
+
+    while (childCount < 4) {
+      const childrenArray = Array.from(container.children);
+      childrenArray.forEach(child => {
+        const clone = child.cloneNode(true);
+        container.appendChild(clone);
+      });
+      childCount = container.children.length;
+    }
+
+    prevBtn.addEventListener('click', () => {
+      swiperEl.swiper.slidePrev();
+    });
+    nextBtn.addEventListener('click', () => {
+      swiperEl.swiper.slideNext();
+    });
+
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+  <script>
+    Object.assign(swiperEl, {
+      slidesPerView: 1,
+      spaceBetween: 20,
+      loop: true,
+      breakpoints: {
+        600: {
+          slidesPerView: 2,
+        },
+        700: {
+          slidesPerView: 3,
+        },
+      }
+    });
+    swiperEl.initialize();
+
+  </script>
 </body>
 
 </html>
